--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="fa">
 <head>
   <meta charset="UTF-8" />
@@ -53,46 +53,47 @@
 
   <section>
     <h2>صبحانه</h2>
-    <div class="item"><span>نیمرو</span><span>۶۰ هزار تومان</span></div>
-    <div class="item"><span>املت</span><span>۸۰ هزار تومان</span></div>
-    <div class="item"><span>سوسیس تخم‌مرغ</span><span>۱۰۰ هزار تومان</span></div>
+    <div class="item"><span>نیمرو</span><span>60 هزار تومان</span></div>
+    <div class="item"><span>املت</span><span>80 هزار تومان</span></div>
+    <div class="item"><span>سوسیس تخم‌مرغ</span><span>100 هزار تومان</span></div>
   </section>
 
   <section>
     <h2>غذاها</h2>
-    <div class="item"><span>آش</span><span>۸۰ هزار تومان</span></div>
-    <div class="item"><span>بندری</span><span>۱۰۰ هزار تومان</span></div>
-    <div class="item"><span>بال</span><span>۱۰۰ هزار تومان</span></div>
-    <div class="item"><span>کتف</span><span>۱۰۰ هزار تومان</span></div>
-    <div class="item"><span>جوجه</span><span>۱۲۰ هزار تومان</span></div>
-    <div class="item"><span>کوبیده</span><span>۱۲۰ هزار تومان</span></div>
+    <div class="item"><span>آش</span><span>80 هزار تومان</span></div>
+    <div class="item"><span>بندری</span><span>100 هزار تومان</span></div>
+    <div class="item"><span>بال</span><span>90 هزار تومان</span></div>
+    <div class="item"><span>کتف</span><span>100 هزار تومان</span></div>
+    <div class="item"><span>جوجه</span><span>120 هزار تومان</span></div>
+    <div class="item"><span>کوبیده</span><span>120 هزار تومان</span></div>
   </section>
 
   <section>
     <h2>قلیان‌ها</h2>
-    <div class="item"><span>دوسیب</span><span>۱۵۰ هزار تومان</span></div>
-    <div class="item"><span>دوسیب آلبالو</span><span>۱۵۰ هزار تومان</span></div>
-    <div class="item"><span>دوسیب نعنا</span><span>۱۵۰ هزار تومان</span></div>
-    <div class="item"><span>سیب یخ</span><span>۱۵۰ هزار تومان</span></div>
-    <div class="item"><span>لیمو نعنا</span><span>۱۵۰ هزار تومان</span></div>
-    <div class="item"><span>پرتغال نعنا</span><span>۱۵۰ هزار تومان</span></div>
-    <div class="item"><span>پرتغال خامه</span><span>۱۵۰ هزار تومان</span></div>
-    <div class="item"><span>هلو آلبالو</span><span>۱۵۰ هزار تومان</span></div>
-    <div class="item"><span>شیر انبه</span><span>۱۵۰ هزار تومان</span></div>
-    <div class="item"><span>آدامس دارچین</span><span>۱۵۰ هزار تومان</span></div>
-    <div class="item"><span>تشمک بستنی</span><span>۱۵۰ هزار تومان</span></div>
-    <div class="item"><span>بلوبری</span><span>۱۵۰ هزار تومان</span></div>
-    <div class="item"><span>الو یخ</span><span>۱۵۰ هزار تومان</span></div>
-    <div class="item"><span>هندوانه</span><span>۱۵۰ هزار تومان</span></div>
-    <div class="item"><span>هندوانه نعنا</span><span>۱۵۰ هزار تومان</span></div>
-    <div class="item"><span>جوکر</span><span>۱۵۰ هزار تومان</span></div>
-    <div class="item"><span>لاو</span><span>۱۵۰ هزار تومان</span></div>
-    <div class="item"><span>شب‌های مسکو</span><span>۱۵۰ هزار تومان</span></div>
-    <div class="item"><span>لیدی</span><span>۱۵۰ هزار تومان</span></div>
+    <div class="item"><span>دوسیب</span><span>150 هزار تومان</span></div>
+    <div class="item"><span>دوسیب آلبالو</span><span>150 هزار تومان</span></div>
+    <div class="item"><span>دوسیب نعنا</span><span>150 هزار تومان</span></div>
+    <div class="item"><span>سیب یخ</span><span>150 هزار تومان</span></div>
+    <div class="item"><span>لیمو نعنا</span><span>150 هزار تومان</span></div>
+    <div class="item"><span>پرتغال نعنا</span><span>150 هزار تومان</span></div>
+    <div class="item"><span>پرتغال خامه</span><span>150 هزار تومان</span></div>
+    <div class="item"><span>هلو آلبالو</span><span>150 هزار تومان</span></div>
+    <div class="item"><span>شیر انبه</span><span>150 هزار تومان</span></div>
+    <div class="item"><span>آدامس دارچین</span><span>150 هزار تومان</span></div>
+    <div class="item"><span>تشمک بستنی</span><span>150 هزار تومان</span></div>
+    <div class="item"><span>بلوبری</span><span>150 هزار تومان</span></div>
+    <div class="item"><span>الو یخ</span><span>150 هزار تومان</span></div>
+    <div class="item"><span>هندوانه</span><span>150 هزار تومان</span></div>
+    <div class="item"><span>هندوانه نعنا</span><span>150 هزار تومان</span></div>
+    <div class="item"><span>جوکر</span><span>150 هزار تومان</span></div>
+    <div class="item"><span>لاو</span><span>150 هزار تومان</span></div>
+    <div class="item"><span>شب‌های مسکو</span><span>150 هزار تومان</span></div>
+    <div class="item"><span>لیدی</span><span>150 هزار تومان</span></div>
+<div class="item"><span>سرویس و چای</span><span>50 هزار تومان</span></div>
   </section>
 
   <footer>
-    <p>برای مشاهده آنلاین منو، QR کد زیر را اسکن کنید:</p>
+    
     <img class="qr" src="QR_CODE_URL" alt="QR Code منو" />
   </footer>
 </body>
