--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="fa">
 <head>
   <meta charset="UTF-8" />
@@ -63,7 +63,7 @@
     <div class="item"><span>آش</span><span>80 هزار تومان</span></div>
     <div class="item"><span>بندری</span><span>100 هزار تومان</span></div>
     <div class="item"><span>بال</span><span>90 هزار تومان</span></div>
-    <div class="item"><span>کتف</span><span>100 هزار تومان</span></div>
+    <div class="item"><span>کتف</span><span>90 هزار تومان</span></div>
     <div class="item"><span>جوجه</span><span>120 هزار تومان</span></div>
     <div class="item"><span>کوبیده</span><span>120 هزار تومان</span></div>
   </section>
